--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/ChrisTuz9/EventSync-FE/issues"
   },
   "homepage": "https://github.com/ChrisTuz9/EventSync-FE#readme",
   "dependencies": {
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "next": "^15.3.3",
     "react": "^19.1.0",
